# gtsam-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SingleTagOdometry.py  VisualiISAMExample.py  build.gradle  camera_proj_test.py  compile_commands.json  graph_ctor.dot  gtsam_camera_tests.ipynb  out.tst  out.txt  requirements.txt  settings.gradle  tag_map_4.dot  twist_odom.py  vcpkg.json  wpilog_to_bag.ipynb  wpilog_to_bag.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
allwpilib/: CMakeLists.txt  CMakeLists.txt.in
catkin_ws/src/gtsam_tags/: CMakeLists.txt  package.xml
catkin_ws/src/gtsam_tags/nodes/: replay_wpilib.py
catkin_ws/src/gtsam_tags/src/: gtsam_tags_node.cpp  localizer.cpp  localizer.h
data/: 2024_tags_7-8_x4.8_y5.30_z0.50_rz180.jsonl  back-left.json  back-right.json  field_tags_2024.jsonl  field_tags_2024_trim.jsonl  field_tags_2024_trim2.jsonl  front-left.json  front-right.json
gtsam/: CMakeLists.txt  CMakeLists.txt.in
logs/: FRC_20241008_044638.wpilog  FRC_20241012_053443.wpilog  FRC_20241012_171633.wpilog  FRC_20241012_184342.wpilog  FRC_20241012_193357.wpilog  FRC_20241013_023615.wpilog
scripts/: epa_datavis.py  replay_calibration.py  replay_wpilog.py  sleipnir_constrained_solvepnp.py  wpilog_info.py
src/: ConstrainedPnp.cpp  TagDetection.h  TagDetectionStruct.h  TagModel.cpp  TagModel.h  cam_proj_test.cpp  camera_listener.cpp  camera_listener.h  config.cpp  config.h  config_listener.cpp  config_listener.h  data_publisher.cpp  data_publisher.h  gtsam_tags_node.cpp  gtsam_utils.cpp  gtsam_utils.h  localizer.cpp  localizer.h  odom_listener.cpp  odom_listener.h  test_fake_tags.cpp
src/sfm_mapper/: PhotonPoseEstimator.cpp  PhotonPoseEstimator.h  README.md  helpers.cpp  helpers.h  main.cpp  main_replay.cpp  mapper_nt_iface.cpp  mapper_nt_iface.h  sfm_mapper.cpp  sfm_mapper.h  wpilog_reader.cpp  wpilog_reader.h
src/tag_mapper/: main.cpp  mapper_nt_iface.cpp  mapper_nt_iface.h
src/wpical/: Pose3WithCovariance.h  Pose3WithCovarianceStruct.h  Pose3WithVariance.h  Pose3WithVarianceStruct.h  gtsam_tag_map.cpp  gtsam_tag_map.h  pose_converters.cpp  pose_converters.h  wpical.cpp  wpical.h
test/: Test_Config.cpp  Test_Localizer.cpp  Test_SFM.cpp  Test_helpers.cpp
test/resources/: good_config.json  simulator.json
